--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Damion&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
+    <link rel="apple-touch-icon" size="57*57" href="./img/57.png">
+    <link rel="apple-touch-icon" size="72*72" href="./img/72.png">
+    <link rel="apple-touch-icon" size="114*114" href="./img/114.png">
     <title>Web-design11</title>
   </head>
   <body>
@@ -33,7 +37,7 @@
 
   <button class="chec">CHECK IT OUT</button>
 
-<img class="dots" src="dots.png">
+<img class="dots" src="./img/dots.png">
 </div>
 
 
@@ -72,13 +76,13 @@
 <section id="Pages">
 <div class="columns">
   <div class"col-1">
-  <img src="icons8-moniicons8-light-bulb-64.pngtor-50.png">
+  <img src="./img/icons8-moniicons8-light-bulb-64.pngtor-50.png">
 
 <h1>RESPONSIVE LAYOUT</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam,<br></p>
 </div>
 <div class"col-2">
-  <img src="icons8-laptop-50.png">
+  <img src="./img/icons8-laptop-50.png">
   <h1>RETINA-READY GRAPHICS</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br> eiusmod tempor incididunt ut labore et dolore magna aliqua<br>
      Ut enim ad minim veniam,<br>.</p>
@@ -86,7 +90,7 @@
   </div>
 
 <div class"col-3">
-    <img src="icons8-book-50.png">
+    <img src="./img/icons8-book-50.png">
     <h1>CUSTOM MENUS</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br> eiusmod tempor incididunt ut labore et dolore magna aliqua. <br>Ut enim ad minim veniam,<br></p>
 
@@ -101,7 +105,7 @@
 <h2>WHAT THEY SAID</h2>
 <p>love many things,for therein lies the true strength,<br>and whosoever loves much performs much and can accomplish much,<br>and what is done in love is done well<br></p>
 <h3>VINCENT VAN GOGH</h3>
-<img src="stop.png">
+<img src="./img/stop.png">
 </div>
 </div>
 </section>
@@ -110,16 +114,16 @@
 </section>
   <section id="pictures">
 <div class="pictures1 pic">
-  <img src="coffee.jpg">
-  <img src="study.jpg">
-  <img src="cds.jpg">
-  <img src="relaxing.jpg">
+  <img src="./img/coffee.jpg">
+  <img src="./img/study.jpg">
+  <img src="./img/cds.jpg">
+  <img src="./img/relaxing.jpg">
 </div>
 <div class="pictures2 pic">
-  <img src="studio.jpg">
-  <img src="stars.jpeg">
-  <img src="chair.jpg">
-  <img src="zep.pg.jpg">
+  <img src="./img/studio.jpg">
+  <img src="./img/stars.jpeg">
+  <img src="./img/chair.jpg">
+  <img src="./img/zep.pg.jpg">
 </div>
 </section>
 
@@ -160,26 +164,26 @@
   <section id="kims">
 
     <div class="kim1">
-      <img src="itea-cup.png" alt="">
+      <img src="./img/itea-cup.png" alt="">
     <p>125</p>
       <h6>giongs</h6>
       </div>
 
 
     <div class="kim1">
-      <img src="look.png" alt="">
+      <img src="./img/look.png" alt="">
     <p>253</p>
       <h6>Retina Ready</h6>
     </div>
 
     <div class="kim1">
-      <img src="lol.png" alt="">
+      <img src="./img/lol.png" alt="">
       <p>72</p>
       <h6>wed develop</h6>
       </div>
 
       <div class="kim1">
-        <img src="lol.png" alt="">
+        <img src="./img/lol.png" alt="">
       <p>25</p>
         <h6>giongs</h6>
         </div>
@@ -232,12 +236,12 @@
           <div class="jiko">
             <h1>Photo Stream</h1>
             <div class="jiko1">
-            <img src="une.jpg">
-            <img src="wow.jpeg">
+            <img src="./img/une.jpg">
+            <img src="./img/wow.jpeg">
           </div>
           <div class="jiko2">
-            <img src="Sun_City.jpg">
-            <img src="cool.jpeg">
+            <img src="./img/Sun_City.jpg">
+            <img src="./img/cool.jpeg">
             </div>
           </div>
 
